# humanapi

./: .gitignore  README.md  pyproject.toml
examples/: basic_chat.py
src/onairos_humanapi/: __init__.py  chat.py  client.py  onairos.py
tests/: conftest.py  test_chat.py  test_client.py  test_onairos.py
