[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onairos-humanapi"
version = "0.1.0"
description = "OpenAI-compatible Human API client with optional LangSmith tracing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Onairos" }]
keywords = ["onairos", "human-api", "langsmith", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "openai>=1.40.0",
  "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Documentation = "https://human-api.onairos.io"
Repository = "https://github.com/onairos/humanapi-python"

[tool.hatch.build.targets.wheel]
packages = ["src/onairos_humanapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["onairos_humanapi"]
